# Modern-Data-Stack

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
ecommerce_analytics/: .user.yml  profiles.yml
ecommerce_analytics/models/marts/: fct_customer_orders.sql
ecommerce_analytics/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_orders.sql
src/: Dashboard.py  db_connection.py  el_pipeline.py  load_olist_data.py
